# perpdex_trading

./: .gitignore  README.md  prompt.md  prompt_kr.md  pyproject.toml  run_trading_bot.py  runfile.py  runfile_mini.py
claude_zone/: 20250930_095732_trading_session.txt  20250930_095800_final_status.txt  20250930_101800_deployment_plan.txt  run_trading_bot.py  test_single_cycle.py  test_single_order.py  test_whitelist_trade.py
cluade_zone/: 20250930_090000_progress.txt  20250930_090916.txt  20250930_092008.txt  20250930_092826.txt  20250930_094800.txt  20250930_122537.txt  20250930_130326.txt  20250930_130358.txt  20250930_130730.txt  20250930_130807.txt  20250930_130828.txt  20250930_130901.txt  20250930_130925.txt  20250930_132427_trade_test_result.txt  20250930_132520_trade_test_result.txt  20250930_132626_trade_test_result.txt  20250930_132659_trade_test_result.txt  20250930_132800_test_report.txt  20250930_133353_paradex_test_result.txt  20250930_133821_paradex_test_result.txt  20250930_133835_paradex_test_result.txt  20250930_134000_paradex_report.txt  20250930_134651_aster_test_result.txt  20250930_134719_aster_test_result.txt  20250930_135000_aster_report.txt  current_time.txt  implementation_log.md  install_packages.sh  simplified_strategy.md  test_aster_trade.py  test_backpack_auth.py  test_backpack_simple.py  test_paradex_trade.py  test_trading_bot.py  trading_result.txt
cluade_zone/exchanges/: aster_client.py  backpack_client.py  grvt_client.py  paradex_client.py
cluade_zone/strategy/: correlation.py  portfolio_manager.py
cluade_zone/trading/: run_bot.py  (+1 more)
(+21 files in other folders)
