[project]
name = "perpdex-trading"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kwon-YJ", email = "kyj1435@gmail.com" }
]
dependencies = [
    "pytest>=8.4.2",
    "grvt-pysdk>=0.2.1",
    "python-dotenv>=1.1.1",
    "cryptography>=46.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/perpdex_trading"]
