[project]
name = "perpdex-trading"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kwon-YJ", email = "kyj1435@gmail.com" }
]
dependencies = [
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "cryptography>=46.0.1",
    "eth-abi>=5.2.0",
    "web3>=7.13.0",
    "hibachi-xyz>=0.1.14",
    "websockets>=15.0.1",
    "base58>=2.1.1",
    "solders>=0.26.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/perpdex_trading"]
